<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.koukobin.ermis</groupId>
	<artifactId>ermis.desktop.client</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0-rc2</version>

	<name>desktop-client</name>
	<url>https://github.com/Koukobin/Ermis</url>
	<inceptionYear>2021</inceptionYear>

	<parent>
		<groupId>io.github.koukobin.ermis</groupId>
		<artifactId>ermis-parent</artifactId>
		<version>0.99.0</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>

	<licenses>
		<license>
			<name>GNU Affero General Public Licence, Version 3.0</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Ilias Koukovinis</name>
			<email>ilias.koukovinis@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/Koukobin/Ermis.git</connection>
		<developerConnection>scm:git:ssh://github.com/Koukobin/Ermis.git</developerConnection>
		<url>https://github.com/Koukobin/Ermis.git</url>
	</scm>

	<properties>
		<mainClass>github.koukobin.ermis.client.main.java.application.ClientLauncher</mainClass>
		<src.resources>src/github/koukobin/ermis/desktop_client/main/resources</src.resources>
		<target>${project.build.directory}</target>
		<target.resources>${target}/classes/github/koukobin/ermis/desktop_client/main/resources/</target.resources>
	</properties>

	<dependencies>

		<dependency>
			<groupId>io.github.koukobin.ermis</groupId>
			<artifactId>ermis.common</artifactId>
			<version>1.0-rc</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.41.2.2</version>
		</dependency>

		<dependency>
			<groupId>io.reactivex.rxjava3</groupId>
			<artifactId>rxjava</artifactId>
			<version>3.1.10</version>
		</dependency>

		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>

		<dependency>
			<groupId>io.github.palexdev</groupId>
			<artifactId>materialfx</artifactId>
			<version>11.13.5</version>
		</dependency>

		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.2.0</version>
		</dependency>

		<!--OpenJFX-->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>17</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>17</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>17</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>17</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>
				14
				<!--Media playing can only work with version 14 or below (Don't ask me why)-->
			</version>
		</dependency>
		<!--OpenJFX-->
	</dependencies>

	<build>

		<sourceDirectory>src</sourceDirectory>
		<finalName>mercury-client</finalName>

		<resources>
			<resource>
				<directory>${src.resources}</directory>
				<targetPath>${target.resources}</targetPath>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>${mainClass}</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<mainClass>${mainClass}</mainClass>
					<arguments>
						<argument>--add-opens</argument>
						<argument>java.base/java.lang=ALL-UNNAMED</argument>
						<argument>-client</argument>
						<argument>-XX:+UseZGC</argument>
						<argument>-XX:+ShrinkHeapInSteps</argument>
						<argument>-XX:MinHeapFreeRatio=2</argument>
						<argument>-XX:MaxHeapFreeRatio=5</argument>
						<argument>-Dfile.encoding=UTF-8</argument>
					</arguments>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
